--- a/Workshop_2 BB/scss/style.scss
+++ b/Workshop_2 BB/scss/style.scss
@@ -1,5 +1,6 @@
 @import "modules/fonts";
 @import "modules/variables";
+@import "modules/mixins";
 
 
 
@@ -168,28 +169,39 @@ body{
         top: 100px;
         right: 0;
         color: white;
-        padding: 20px;
+        padding: 29px 10px 10px 35px;
+        @include border-radius-left-only(10px);
+        
         h1 {
             font-family: $main-font-family;
-            font-size: 1.9rem;
+            font-size: 3.2rem;
             text-transform: uppercase;
-            font-weight: bold;
+            font-weight: 500;
         }
         h3 {
             font-family: $main-font-family;
-            font-size: 1.1rem;
-            
+            font-size: 2rem;
+            margin-bottom: 0;
+            letter-spacing: 0.02rem;
             
         }
         button {
             
             font-family: $main-font-family;
-            font-size: 1.1rem;
+            font-size: 1.6rem;
             text-transform: uppercase;
             color: white;
-            background-color: $fonts-color-grey-header;
-            border: 1px solid $fonts-color-grey-header;
-           
+            background-color: #262626;
+            border: 1px solid #262626;
+            font-weight: normal;
+            position: absolute;
+            left: 35px;
+            bottom: 10px;
+            padding: 6px 55px;
+            line-height: normal;
+            
+            @include border-radius(10px, 10px);
+            
         }
     }
     
@@ -200,30 +212,65 @@ body{
     display: flex;
     background-color: $section-background-color;
     font-family: $main-font-family;
-    div:first-child {
-        display: flex;
-        align-items: center;
+    padding: 20px 0 30px 0;
+    
+    div{
         text-align: left;
-        padding: 20px;
-        h1 {
-            font-size: 1.8rem;
-        };
+        padding: 15px 20px 0 10px;
+       
         p {
-            font-size: 0.9rem;
+            font-size: 1.5rem;
+            line-height: 2rem;
+            padding-right: 10px;
         }
         a {
             float: right;
-            font-size: 1.1rem;
+            font-size: 2rem;
         }
         
     }
+    .five.columns { /*img keys*/
+        img { 
+            margin-top: 30px;
+        }
+    }
+    .seven.columns {
+         h1 {
+            font-size: 3rem;
+            padding: 0 20px 20px 0;   
+        }
+    }
+    .sliders {
+        padding-left: 75px;
+        padding-right: 75px;
+        h1 {
+            font-size: 3rem;
+            padding: 20px 20px 20px 0;   
+        }
+        .ui-slider-horizontal {
+            border: none;
+            height: 0.1rem;
+            .ui-slider-range {
+                height: 1rem;
+            }
+            .ui-slider-handle {
+                background: $baner-background-color;
+                border: none;
+                width: 6rem;
+                height: 3rem;
+                
+                
+            }
+        }
+    }
+    
 }
 
 /*section -class contact*/
 
 .contact {
     background-color: $baner-background-color;
-    padding: 50px;
+    padding: 60px 50px 75px 50px;
     align-items: center;
     justify-content: center;
     color: $fonts-color-contact;
@@ -234,29 +281,84 @@ body{
     };
     
     h1{
-        font-size: 2rem;
+        padding-top: 15px;
+        font-size: 3.2rem;
         margin-bottom: 0;
     }
     h3 {
-        font-size: 1rem;
+        font-size: 1.5rem;
+        letter-spacing: 0.02rem;
     }
     button {
-        font-size: 1.4rem;
+        font-size: 2rem;
+        border: 1px solid white;
+        color: white;
+        text-transform: none;
+        font-weight: normal;
+        padding: 5px 35px 5px 35px;
+        height: 55px;
+        @include border-radius(10px, 10px);
+    }
+    .ask {
+        padding: 5px 75px 5px 75px;
+    }
+    .check-this {
+        padding: 5px 75px 5px 75px;
     }
 }
 
 //section -  class info//
 .info {
     font-family: $main-font-family;
-    ul {
-        font-size: 1.1rem;
-    }
-    li {
-        font-size: 0.9rem;
+    background-color: white;
+    padding-left: 70px;
+    padding-right: 70px;
+    div {
+        display: flex;
+        justify-content: center;
+        padding-top: 30px;
+        
+        ul {
+            list-style-type: square;
+            font-size: 1.9rem;
+            font-weight: bold;
+            color: $fonts-color-grey-header;
+        }
+        li {
+            line-height: 2.5rem;
+            font-size: 1.5rem;
+            color: $fonts-color-grey-header;
+            font-weight: normal;
+        }
     }
 }
 
 footer {
     font-family: $main-font-family;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
+    color: $fonts-color-grey-header;
+    .eight.columns {
+        div {
+            width: 100%;
+        }
+    }
+    .four.columns {
+         li{
+            border-right: 1px solid $fonts-color-grey-header;
+            padding-right: 10px;
+            padding-left: 10px;
+    
+        }
+        ul{
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            ul:last-child {
+                border: none;   
+            }
+        }
+       
+        
+    }
 }
