--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ body {
   /* line 62, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .top .fa.fa-search {
     position: absolute;
+    height: 38px;
     right: 0px;
     top: 10px;
     bottom: 0;
@@ -186,11 +187,11 @@ body {
     border: 1px solid #D1D1D1;
     border-radius: 0;
     margin-bottom: 0; }
-  /* line 74, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 75, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .top .three.columns {
     /*div with button ZALOGUJ*/
     margin-left: 0; }
-  /* line 77, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 78, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .top .button {
     /*button ZALOGUJ*/
     height: 30px;
@@ -207,7 +208,7 @@ body {
     font-weight: normal; }
 
 /*section - class menu*/
-/* line 96, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 97, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 .menu {
   display: flex;
   background-color: white;
@@ -215,7 +216,7 @@ body {
   text-align: right;
   padding: 20px 20px 0 10px;
   align-items: center; }
-  /* line 104, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 105, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .menu ul {
     display: flex;
     background-color: white;
@@ -226,14 +227,14 @@ body {
     align-content: center;
     margin-bottom: 0;
     padding-top: 10px; }
-  /* line 116, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 117, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .menu li {
     padding-right: 12px;
     padding-left: 12px;
     font-size: 1.4rem;
     color: #8f8f8f;
     border-right: 1px solid #8f8f8f; }
-  /* line 125, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 126, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .menu span {
     /*Bezpieczny Bank*/
     font-weight: bold;
@@ -243,7 +244,7 @@ body {
     align-self: flex-start; }
 
 /*section - class banner*/
-/* line 138, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 139, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 .banner {
   display: flex;
   padding-top: 25px;
@@ -251,17 +252,17 @@ body {
   z-index: 1;
   position: relative;
   line-height: 0; }
-  /* line 149, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 150, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .banner div.columns img:first-child {
     height: 450px;
     z-index: 10;
     width: 100%;
     padding-bottom: 0; }
-  /* line 156, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 157, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .banner div.columns #line {
     position: absolute;
     top: 0; }
-  /* line 161, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 162, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .banner div.offer-box {
     display: flex;
     flex-direction: column;
@@ -277,19 +278,19 @@ body {
     -moz-border-radius: 10px 0 0 10px;
     -ms-border-radius: 10px 0 0 10px;
     border-radius: 10px 0 0 10px; }
-    /* line 175, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 176, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .banner div.offer-box h1 {
       font-family: "Raleway", "Serif", "sans-serif";
       font-size: 3.2rem;
       text-transform: uppercase;
       font-weight: 500; }
-    /* line 181, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 182, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .banner div.offer-box h3 {
       font-family: "Raleway", "Serif", "sans-serif";
       font-size: 2rem;
       margin-bottom: 0;
       letter-spacing: 0.02rem; }
-    /* line 188, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 189, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .banner div.offer-box button {
       font-family: "Raleway", "Serif", "sans-serif";
       font-size: 1.6rem;
@@ -309,59 +310,73 @@ body {
       border-radius: 10px 10px; }
 
 /*section - class offer*/
-/* line 211, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 212, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 .offer {
   display: flex;
   background-color: white;
   font-family: "Raleway", "Serif", "sans-serif";
-  padding: 20px 0 30px 0; }
-  /* line 217, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  padding: 20px 0 0 0; }
+  /* line 218, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .offer div {
     text-align: left;
     padding: 15px 20px 0 10px; }
-    /* line 221, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 222, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .offer div p {
       font-size: 1.5rem;
       line-height: 2rem;
       padding-right: 10px; }
-    /* line 226, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
-    .offer div a {
-      float: right;
-      font-size: 2rem; }
-  /* line 232, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 231, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .offer .five.columns {
     /*img keys*/ }
-    /* line 233, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 232, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .offer .five.columns img {
       margin-top: 30px; }
-  /* line 238, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 237, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .offer .seven.columns h1 {
     font-size: 3rem;
     padding: 0 20px 20px 0; }
-  /* line 243, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 241, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  .offer .seven.columns p {
+    padding-bottom: 20px; }
+  /* line 245, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .offer .sliders {
     padding-left: 75px;
     padding-right: 75px; }
-    /* line 246, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 249, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .offer .sliders h1 {
       font-size: 3rem;
       padding: 20px 20px 20px 0; }
-    /* line 250, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 254, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    .offer .sliders p {
+      font-weight: bold; }
+    /* line 257, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .offer .sliders .ui-slider-horizontal {
-      border: none;
-      height: 0.1rem; }
-      /* line 253, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+      height: 0.1rem;
+      margin: 15px 15px 15px 0; }
+      /* line 262, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
       .offer .sliders .ui-slider-horizontal .ui-slider-range {
         height: 1rem; }
-      /* line 256, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+      /* line 265, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
       .offer .sliders .ui-slider-horizontal .ui-slider-handle {
         background: #4FC3D8;
         border: none;
-        width: 6rem;
-        height: 3rem; }
+        width: 3rem;
+        height: 2.5rem; }
+
+/* line 277, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+.learn-more {
+  display: flex;
+  background-color: white;
+  font-family: "Raleway", "Serif", "sans-serif";
+  padding: 0 0 20px 0; }
+  /* line 283, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  .learn-more a {
+    float: right;
+    font-size: 2rem;
+    padding-right: 75px; }
 
 /*section -class contact*/
-/* line 271, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 293, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 .contact {
   background-color: #4FC3D8;
   padding: 60px 50px 75px 50px;
@@ -369,20 +384,20 @@ body {
   justify-content: center;
   color: white;
   font-family: "Raleway", "Serif", "sans-serif"; }
-  /* line 278, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 300, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .contact div {
     align-items: center;
     text-align: center; }
-  /* line 283, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 305, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .contact h1 {
     padding-top: 15px;
     font-size: 3.2rem;
     margin-bottom: 0; }
-  /* line 288, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 310, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .contact h3 {
     font-size: 1.5rem;
     letter-spacing: 0.02rem; }
-  /* line 292, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 314, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .contact button {
     font-size: 2rem;
     border: 1px solid white;
@@ -395,57 +410,57 @@ body {
     -moz-border-radius: 10px 10px;
     -ms-border-radius: 10px 10px;
     border-radius: 10px 10px; }
-  /* line 302, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 324, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .contact .ask {
     padding: 5px 75px 5px 75px; }
-  /* line 305, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 327, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .contact .check-this {
     padding: 5px 75px 5px 75px; }
 
-/* line 311, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 333, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 .info {
   font-family: "Raleway", "Serif", "sans-serif";
   background-color: white;
   padding-left: 70px;
   padding-right: 70px; }
-  /* line 316, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 338, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .info div {
     display: flex;
     justify-content: center;
     padding-top: 30px; }
-    /* line 321, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 343, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .info div ul {
       list-style-type: square;
       font-size: 1.9rem;
       font-weight: bold;
       color: #8f8f8f; }
-    /* line 327, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 349, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .info div li {
       line-height: 2.5rem;
       font-size: 1.5rem;
       color: #8f8f8f;
       font-weight: normal; }
 
-/* line 336, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 358, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 footer {
   font-family: "Raleway", "Serif", "sans-serif";
   font-size: 1.3rem;
   color: #8f8f8f; }
-  /* line 341, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 363, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   footer .eight.columns div {
     width: 100%; }
-  /* line 346, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 368, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   footer .four.columns li {
     border-right: 1px solid #8f8f8f;
     padding-right: 10px;
     padding-left: 10px; }
-  /* line 352, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 374, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   footer .four.columns ul {
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: flex-end; }
-    /* line 357, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 379, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     footer .four.columns ul ul:last-child {
       border: none; }
 
