--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,7 @@ body{
 
     .fa.fa-search {
         position: absolute;
+        height: 38px;
         right: 0px;
         top: 10px;
         bottom: 0;
@@ -212,9 +213,9 @@ body{
     display: flex;
     background-color: $section-background-color;
     font-family: $main-font-family;
-    padding: 20px 0 30px 0;
+    padding: 20px 0 0 0;
     
-    div{
+    div {
         text-align: left;
         padding: 15px 20px 0 10px;
        
@@ -222,11 +223,9 @@ body{
             font-size: 1.5rem;
             line-height: 2rem;
             padding-right: 10px;
+            
         }
-        a {
-            float: right;
-            font-size: 2rem;
-        }
+        
         
     }
     .five.columns { /*img keys*/
@@ -239,32 +238,55 @@ body{
             font-size: 3rem;
             padding: 0 20px 20px 0;   
         }
+        p {
+            padding-bottom: 20px;
+        }
     }
     .sliders {
         padding-left: 75px;
         padding-right: 75px;
+        
         h1 {
             font-size: 3rem;
             padding: 20px 20px 20px 0;   
         }
+        
+        p {
+            font-weight: bold;
+        }
         .ui-slider-horizontal {
-            border: none;
+           
             height: 0.1rem;
+            margin: 15px 15px 15px 0; 
+            
             .ui-slider-range {
                 height: 1rem;
-            }
+            };
             .ui-slider-handle {
                 background: $baner-background-color;
                 border: none;
-                width: 6rem;
-                height: 3rem;
-                
-                
+                width: 3rem;
+                height: 2.5rem;
+                  
             }
         }
     }
     
 }
+
+.learn-more { 
+    display: flex;
+    background-color: $section-background-color;
+    font-family: $main-font-family;
+    padding: 0 0 20px 0;
+    
+    a {
+        float: right;
+        font-size: 2rem;
+        padding-right: 75px;
+    }
+}
+
 
 /*section -class contact*/
 
