--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,6 +157,7 @@ body{
         #line {
             position: absolute;
             top: 0;
+            left: 0;
         }
     }
     div.offer-box {
