--- a/css/style.css
+++ b/css/style.css
@@ -404,64 +404,59 @@ body {
     border: 1px solid white;
     color: white;
     text-transform: none;
+    text-align: center;
     font-weight: normal;
-    padding: 5px 35px 5px 35px;
+    width: 250px;
     height: 55px;
     -webkit-border-radius: 10px 10px;
     -moz-border-radius: 10px 10px;
     -ms-border-radius: 10px 10px;
     border-radius: 10px 10px; }
-  /* line 325, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
-  .contact .ask {
-    padding: 5px 75px 5px 75px; }
-  /* line 328, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
-  .contact .check-this {
-    padding: 5px 75px 5px 75px; }
 
-/* line 334, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 329, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 .info {
   font-family: "Raleway", "Serif", "sans-serif";
   background-color: white;
   padding-left: 70px;
   padding-right: 70px; }
-  /* line 339, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 334, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   .info div {
     display: flex;
     justify-content: center;
     padding-top: 30px; }
-    /* line 344, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 339, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .info div ul {
       list-style-type: square;
       font-size: 1.9rem;
       font-weight: bold;
       color: #8f8f8f; }
-    /* line 350, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 345, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     .info div li {
       line-height: 2.5rem;
       font-size: 1.5rem;
       color: #8f8f8f;
       font-weight: normal; }
 
-/* line 359, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+/* line 354, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
 footer {
   font-family: "Raleway", "Serif", "sans-serif";
   font-size: 1.3rem;
   color: #8f8f8f; }
-  /* line 364, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 359, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   footer .eight.columns div {
     width: 100%; }
-  /* line 369, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 364, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   footer .four.columns li {
     border-right: 1px solid #8f8f8f;
     padding-right: 10px;
     padding-left: 10px; }
-  /* line 375, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+  /* line 370, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
   footer .four.columns ul {
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: flex-end; }
-    /* line 380, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
+    /* line 375, Z:/CodersLab/Warsztaty/Workshop_2 BB/scss/style.scss */
     footer .four.columns ul ul:last-child {
       border: none; }
 
